--- a/lib/generators/happy_seed/static_blog/templates/source/layouts/article_layout.haml
+++ b/lib/generators/happy_seed/static_blog/templates/source/layouts/article_layout.haml
@@ -11,6 +11,7 @@
     = feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed"
 
   %body
+    = partial "layouts/main_header"
     = partial "layouts/article_header"
       
     .content
