--- a/lib/generators/happy_seed/static_blog/templates/source/layouts/_footer.haml
+++ b/lib/generators/happy_seed/static_blog/templates/source/layouts/_footer.haml
@@ -5,3 +5,8 @@
       is a
       = link_to "HappyFunCorp", "http://happyfuncorp.com"
       production.
+
+    %p.social
+      - (data['site']['social'] || {}).each do |type,url|
+        %a{ href: url }
+          %span{ class: "socicon socicon-#{type.to_s} bgcolor" }
