--- a/lib/generators/happy_seed/static_blog/templates/source/layouts/_main_header.haml
+++ b/lib/generators/happy_seed/static_blog/templates/source/layouts/_main_header.haml
@@ -2,15 +2,16 @@
   = navbar_header brand: data['site']['title'], brand_link: '/'
   = navbar_collapse do
     = navbar_group class: 'foo', id: 'menu' do
-      = navbar_text 'Pick an option:'
       = navbar_item "Home", '/'
+      = navbar_item "About Us", '/about.html'
+      = navbar_dropdown "Tags" do
+        - blog.tags.keys.each do |t|
+          = navbar_item t, "/tags/#{t}.html"
+      = navbar_dropdown "Archives" do
+        - blog.articles.group_by {|a| a.date.strftime('%b %Y') }.each do |date, list|
+          = navbar_item date, list.first.date.strftime( "/%Y/%m.html" )
+
+    = navbar_group align: 'right' do
       = navbar_item '/contact' do
         %span.glyphicon.glyphicon-hand-right
         Contact Us!
-      = navbar_dropdown "Stuff" do
-        = navbar_dropdown_header 'Great stuff!'
-        = navbar_item "One", '/one'
-        = navbar_item "Two", '/two'
-        = navbar_item "Three", '/three'
-    = navbar_group align: 'right' do
-      = navbar_item "About Us", '/about-us'
