Cleaned up bootstrap template

--- a/lib/generators/happy_seed/bootstrap/templates/app/views/application/_header.html.haml
+++ b/lib/generators/happy_seed/bootstrap/templates/app/views/application/_header.html.haml
@@ -1,16 +1,10 @@
-%header#top.navbar.navbar-default{:role=>:banner}
-  .container-fluid
-    .navbar-header
-      %button.navbar-toggle{:type=>:button, 'data-toggle'=>:collapse, 'data-target'=>'.navbar-collapse'}
-        %span.sr-only Toggle navigations
-        %span.icon-bar
-        %span.icon-bar
-        %span.icon-bar
-      = link_to root_path, :class=>'navbar-brand' do
-        %span.glyphicon.glyphicon-cloud
-        App name
-    %nav.collapse.navbar-collapse{:role=>:navigation}
-      %ul.nav.navbar-nav
-        %li= link_to 'Contact', '#'
-        %li= link_to 'Blog', '#'
+= navbar position: :static do
+  = vertical do
+    = link_to root_path do
+      %span.glyphicon.glyphicon-cloud
+      Home
+  = horizontal do
+    = nav class: 'navbar-right' do
+      = link_to 'Contact', ""
+      = link_to 'About', ""
       / USER NAV
