--- a/lib/generators/happy_seed/devise/templates/app/views/devise/passwords/new.html.haml
+++ b/lib/generators/happy_seed/devise/templates/app/views/devise/passwords/new.html.haml
@@ -1,6 +1,6 @@
 .container
   .row
-    .col-lg-6.col-lg-offset-3.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2
+    .center_panel
       .panel.panel-default.only
 
         .panel-heading
@@ -8,20 +8,13 @@
 
         .panel-body
 
-          = form_for(resource, as: resource_name, url: password_path(resource_name), :html=>{:role=>:form, :class=>'form-horizontal'}) do |f|
+          = form_for(resource, as: resource_name, url: password_path(resource_name), layout: :horizontal) do |f|
 
-            = devise_error_messages!
+            / = devise_error_messages!
 
-            .form-group
-              = f.label :email, :class=>'control-label col-lg-3'
-              .col-lg-9= f.email_field :email, autofocus: true, :class=>'form-control', :placeholder=>'Email'
+            = f.email_field :email, autofocus: true
 
-            .form-group
-              .col-lg-9.col-lg-offset-3
-                = f.submit "Send me reset password instructions", :class=>'btn btn-primary form-control'
+            = f.submit "Send me reset password instructions"
 
-            .form-group
-              .col-lg-9.col-lg-offset-3.text-right
-                = link_to 'Sign in',  new_user_session_path
-                %br
-                = link_to 'Sign up',  new_user_registration_path
+          %p.text-right
+            = render partial: "devise/shared/links"
