--- a/lib/generators/happy_seed/devise/templates/app/views/devise/registrations/new.html.haml
+++ b/lib/generators/happy_seed/devise/templates/app/views/devise/registrations/new.html.haml
@@ -1,7 +1,7 @@
 - @title = "Sign Up"
 .container
   .row
-    .col-lg-6.col-lg-offset-3.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2
+    .center_panel
       .panel.panel-default.only
 
         .panel-heading
@@ -9,27 +9,18 @@
 
         .panel-body
 
-          = form_for(resource, as: resource_name, url: registration_path(resource_name), :html=>{:role=>:form, :class=>'form-horizontal'}) do |f|
+          = form_for resource, as: resource_name, url: registration_path(resource_name), layout: :horizontal do |f|
 
-            = devise_error_messages!
+            / = devise_error_messages!
 
-            .form-group
-              = f.label :email, :class=>'control-label col-lg-3'
-              .col-lg-9= f.email_field :email, autofocus: true, :class=>'form-control', :placeholder=>'Email'
+            = f.email_field :email, autofocus: true
+            = f.password_field :password, autocomplete: "off"
+            = f.password_field :password_confirmation, autocomplete: "off"
 
-            .form-group
-              = f.label :password, :class=>'control-label col-lg-3'
-              .col-lg-9= f.password_field :password, autocomplete: "off", :class=>'form-control', :placeholder=>'Password'
+            - if devise_mapping.rememberable?
+              = f.check_box :remember_me
 
-            .form-group
-              = f.label :password_confirmation, :class=>'control-label col-lg-3'
-              .col-lg-9= f.password_field :password_confirmation, autocomplete: "off", :class=>'form-control', :placeholder=>'Confirm password'
+            = f.submit "Sign Up"
 
-            .form-group
-              .col-lg-9.col-lg-offset-3
-                = f.submit "Sign up", :class=>'btn btn-primary form-control'
-
-            .form-group
-              .col-lg-9.col-lg-offset-3.text-right
-                / CONNECT
-                = link_to 'Sign in',  new_user_session_path
+          %p.text-right
+            = render partial: "devise/shared/links"
