--- a/lib/generators/happy_seed/bootstrap/templates/app/assets/stylesheets/application.css.scss
+++ b/lib/generators/happy_seed/bootstrap/templates/app/assets/stylesheets/application.css.scss
@@ -5,3 +5,15 @@
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+
+// This is used by the devise generated views.
+.center_panel {
+  @extend .col-lg-6;
+  @extend .col-lg-offset-3;
+
+  @extend .col-md-6;
+  @extend .col-md-offset-3;
+
+  @extend .col-sm-8;
+  @extend .col-sm-offset-2;
+}
