--- a/lib/generators/happy_seed/base/templates/app/views/setup/index.html.haml
+++ b/lib/generators/happy_seed/base/templates/app/views/setup/index.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %title HappySeed Generator setup page
+    %script{:src=>"https://code.jquery.com/jquery-2.1.3.min.js"}
     %script{:src=>"//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"}
     %link{:href=>"//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css", :rel=>"stylesheet"}
     :css
@@ -13,6 +14,8 @@
       }
 
   %body
+    = render partial: "application/flashes"
+    = render partial: "application/header"
     .container
       .row
         .col-sm-3
