Cleaned up active admin

--- a/lib/generators/happy_seed/admin/templates/app/views/admin/_chart.html.haml
+++ b/lib/generators/happy_seed/admin/templates/app/views/admin/_chart.html.haml
@@ -1,5 +1,4 @@
-= scope
-%div{ id: scope, style: "height: 300px" }
+%div{ id: "#{scope}_chart", style: "height: 300px" }
 
 :javascript
-  $( function() { new Chartkick.ColumnChart( '#{scope}', "/admin/stats/#{scope}" ) } )
+  $( function() { new Chartkick.ColumnChart( '#{scope}_chart', "/admin/stats/#{scope}" ) } )
