Added link to the blog

--- a/website/source/index.html.haml
+++ b/website/source/index.html.haml
@@ -91,7 +91,7 @@
           %li= link_to "rspec", "http://rspec.info"
           %li= link_to "factory_girl", "https://github.com/thoughtbot/factory_girl"
           %li= link_to "webmock", "https://github.com/bblimke/webmock"
-          %li= link_to "autotest", "http://autotest.github.io"
+          %li= link_to "guard", "http://guardgem.org"
           %li Plugin generator to write your own rails extensions
 
 
