--- a/website/source/layouts/layout.haml
+++ b/website/source/layouts/layout.haml
@@ -54,7 +54,8 @@
               %li= link_to 'Rails', "/docs/rails.html"
               %li= link_to 'Plugins', "/docs/plugin.html"
               %li= link_to 'Static', "/docs/middleman.html"
-          %li= link_to "Blog", "http://codex.happyfuncorp.com/tagged/happy_seed"
+          %li= link_to "Blog", "http://codex.happyfuncorp.com/tagged/seed"
+          %li= link_to seed_version, "https://github.com/happyfuncode/happy_seed"
 
     = yield
 
