--- a/lib/generators/happy_seed/static/templates/source/index.html.haml
+++ b/lib/generators/happy_seed/static/templates/source/index.html.haml
@@ -22,11 +22,11 @@ title: Welcome to Happy Seeds Static Site
         The following middleman components are installed
 
         %ul
-          %li middleman
-          %li middleman-deploy
-          %li middleman-meta-tags
-          %li middleman-livereload
-          %li middleman-bootstrap-navbar
+          %li= link_to "middleman", "https://middlemanapp.com"
+          %li= link_to "middleman-deploy", "https://github.com/middleman-contrib/middleman-deploy"
+          %li= link_to "middleman-meta-tags", "https://github.com/HappyFunCorp/middleman-autometatags"
+          %li= link_to "middleman-livereload", "https://github.com/middleman/middleman-livereload"
+          %li= link_to "bh", "https://github.com/Fullscreen/bh"
 
 
         = link_to "Read Middleman Documentation", "http://middlemanapp.com/"
@@ -41,7 +41,7 @@ title: Welcome to Happy Seeds Static Site
           %li CNAME file gets generated if it exists for github pages subdomaining
           %li data/site.yml file for default site meta data
           %li meta_tags is enabled with the auto_meta tagger
-          %li Bootstrap nav bar helpers are actived
+          %li Bootstrap helpers
           %li Livereload is on for development
           %li Asset cleanup is on for build
           %li Deploy to github pages setup by default
