--- a/lib/generators/happy_seed/static_blog/templates/source/stylesheets/application.css.scss
+++ b/lib/generators/happy_seed/static_blog/templates/source/stylesheets/application.css.scss
@@ -1,5 +1,7 @@
 @import "bootstrap";
 
+$sticky_footer_height: 60px;
+
 body {
   padding-top: $navbar-height + 20;
 }
@@ -10,12 +12,16 @@ html.sticky {
   min-height: 100%;
 }
 
+.sticky body {
+  margin-bottom: $sticky_footer_height;
+}
+
 .sticky .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 60px;
+  height: $sticky_footer_height;
   background-color: #f5f5f5;
 
   .text-muted {
@@ -24,8 +30,12 @@ html.sticky {
   }
 
   .social {
-    float: right;
-    font-size: 1.5em;
+    display: none;
+    @media (min-width: $screen-sm-min) {
+      float: right;
+      font-size: 1.5em;
+      display: block;
+    }
     a {
       color: white;
     }
@@ -142,6 +152,8 @@ code {
 
 
 .timeline {
+  @extend .container;
+
   margin-top: 2em;
 
   .post {
