--- a/lib/generators/happy_seed/static_blog/templates/source/stylesheets/application.css.scss
+++ b/lib/generators/happy_seed/static_blog/templates/source/stylesheets/application.css.scss
@@ -12,16 +12,21 @@ html.sticky {
   min-height: 100%;
 }
 
-.sticky body {
-  margin-bottom: $sticky_footer_height;
+@media (min-width: $screen-sm-min) {
+  .sticky body {
+    margin-bottom: $sticky_footer_height;
+  }
+
+  .sticky footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: $sticky_footer_height;
+  }
 }
 
-.sticky .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: $sticky_footer_height;
+.footer {
   background-color: #f5f5f5;
 
   .text-muted {
