--- a/website/source/layouts/layout.haml
+++ b/website/source/layouts/layout.haml
@@ -55,7 +55,7 @@
               %li= link_to 'Plugins', "/docs/plugin.html"
               %li= link_to 'Static', "/docs/middleman.html"
               %li= link_to 'Contribute', "/docs/contribute.html"
-          %li= link_to "Blog", "http://codex.happyfuncorp.com/tagged/seed"
+          %li= link_to "Blog", "http://codex.happyfuncorp.com/tags/seed.html"
           %li= link_to seed_version, "https://github.com/HappyFunCorp/happy_seed/blob/master/CHANGELOG.md"
 
     = yield
