--- a/website/source/layouts/_footer.html.haml
+++ b/website/source/layouts/_footer.html.haml
@@ -13,7 +13,7 @@
               .input-group
                 %input.form-control{ type: "email", name: "EMAIL", :placeholder=>'email address' }
                 %span.input-group-btn
-                  = submit_tag 'Sign Up', :class => "btn btn-default"
+                  = submit_tag 'Sign Up', :class => "btn btn-primary"
         %h2
           You’ll get updates on new products, upcoming
           %br
