--- a/website/source/layouts/layout.haml
+++ b/website/source/layouts/layout.haml
@@ -15,7 +15,7 @@
     <meta property="og:image" content="https://s3.amazonaws.com/happyfuncorp-cdn/use-happy-seed.png"/>
     <meta property="og:description" content="Roses are red, violets are blue, your code sucks because you’re not using seed."/>
 
-    = stylesheet_link_tag 'application', :media => nil
+    = stylesheet_link_tag 'application', "socicons", :media => nil
 
     -# Append your own using content_for :stylesheets
     / = yield :stylesheets
