--- a/website/source/stylesheets/application.css.scss
+++ b/website/source/stylesheets/application.css.scss
@@ -501,10 +501,10 @@ h3.outset {
 
 footer {
 
-  &.under {
+  // &.under {
     padding-top:$section-spacing*2;
     margin-top:-$section-spacing;
-  }
+  // }
 
 
   color: white;
