--- a/website/source/layouts/_footer.html.haml
+++ b/website/source/layouts/_footer.html.haml
@@ -31,7 +31,8 @@
           %li=link_to "Portfolio", "http://happyfuncorp.com/#portfolio"
           %li=link_to "Happy Thoughts", "http://happyfuncorp.com/#happy-thoughts"
           %li=link_to "News", "http://happyfuncorp.com/#news"
-          %li=link_to "Jobs", "http://happyfuncorp.com/#jobs"
+          %li=link_to "Blog", "http://codex.happyfuncorp.com"
+          / %li=link_to "Jobs", "http://happyfuncorp.com/#jobs"
           %li=link_to "Events", "http://academy.happyfuncorp.com/"
           %li=link_to "Contact", "http://happyfuncorp.com/#contact"
 
