btn default color

--- a/website/source/stylesheets/application.css.scss
+++ b/website/source/stylesheets/application.css.scss
@@ -51,7 +51,7 @@ $color-background: #202a39;
 $color-background-light: darken( white, 10% ); // #DAE3BB; //#3D6299;
 $color-text: #ddd;
 $color-text-light: $color-background; //#3F005E;
-
+$btn-default-color: #2F3620;
 $font-size-base: 18px;
 
 $header-font-size-base: 16px;
