Changing angular view gnerator to fix #46

--- a/lib/generators/happy_seed/angular_install/templates/app/assets/javascripts/angular_app.js.coffee.erb
+++ b/lib/generators/happy_seed/angular_install/templates/app/assets/javascripts/angular_app.js.coffee.erb
@@ -1,17 +1,17 @@
-console.log "Initializing Angular App"
-app = angular.module( "HappySeed", ["ngResource", "ngRoute"])
+@app = angular.module( "HappySeed", ["ngResource", "ngRoute"])
 
-app.config(["$httpProvider", (p) ->
+@app.config(["$httpProvider", (p) ->
   m = document.getElementsByTagName('meta')
   for i in m 
     p.defaults.headers.common['X-CSRF-Token'] = i.content if i.name == 'csrf-token'
 ])
 
-app.config(['$routeProvider', ($routeProvider) ->
-  $routeProvider.
+@app.config(['$routeProvider', ($routeProvider) ->
+  $routeProvider.    when('/landing',            {templateUrl: '<%= asset_path('landing.html' )%>',  controller: 'LandingCtrl'}).
+
+
     otherwise({redirectTo: '/landing'});
 ])
-
 
 safeApply = (scope, fn) ->
   if( scope.$$phase || scope.$root.$$phase )
@@ -19,19 +19,19 @@ safeApply = (scope, fn) ->
   else
     scope.$apply(fn)
 
-app.directive 'onEsc', ->
+@app.directive 'onEsc', ->
   link: (scope, elm, attr) ->
     elm.bind 'keydown', (e)->
       if( e.keyCode == 27 )
         scope.$apply attr.onEsc
 
-app.directive 'onEnter', ->
+@app.directive 'onEnter', ->
   link: (scope, elm, attr) ->
     elm.bind 'keydown', (e) ->
       if( e.keyCode == 13 )
         scope.$apply attr.onEnter
 
-app.directive 'onTab', ->
+@app.directive 'onTab', ->
   link: (scope, elm, attr) ->
     elm.bind 'keydown', (e) ->
       if( e.keyCode == 9 )
